Fix to text overlapping squares in ZoomLegend stations

--- a/src/components/ZoomLegend.css
+++ b/src/components/ZoomLegend.css
@@ -39,7 +39,7 @@
 .station {
   text-align: left;
   margin-left: 5px;
-  font-size: 12px;
+  font-size: 10px;
   /* margin-bottom: 10%; */
   /* vertical-align: top; */
 }
